# test_rep_de

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
api/: main.py  schemas.py
dags/: dbt_run_dag.py  ingestion_dag.py  quality_monitor_dag.py
dbt_project/: dbt_project.yml
dbt_project/models/mart/: dim_customers.sql  fct_orders.sql
dbt_project/models/staging/: stg_customers.sql  stg_orders.sql
docker/: Dockerfile  docker-compose.yml
src/: __init__.py  alert_manager.py  anomaly_detector.py  bigquery_connector.py  data_profiler.py  llm_explainer.py
tests/: test_anomaly.py  test_dags.py  test_profiler.py
